#ifndef CONFIG_HPP
#define CONFIG_HPP

struct Config {
    int port = 8080;
    int maxThreads = 4;
};

#endif // CONFIG_HPP
